@@ -31,8 +31,9 @@ Do not worry about slowing down of Updates. it`s time to learn Blender c++ codin
 
 # latest Updates
 
-* Light/Camera lister Improved.
-* 'Freeze On' Repeat count issue fixed.
+* 'OpenGL Depth Picking' Automaticly disable on Pose mode to speed up bone selecting.
+* 'C' Camera search fits camera frame to view too (3DsMax Mode).
+* Timeline Red bar back with no crash.
 * [Update History...](https://github.com/NevilArt/BsMax_2_80/blob/master/HISTORY.TXT)
 
 # License
