@@ -1,3 +1,7 @@
+#0,1,0,20210510
+	Light/Camera lister Improved.
+	'Freeze On' Repeat count issue fixed.
+
 #0,1,0,20210506
 	'Freeze On' improved ('Animation/Freeze On')
 
